--- a/src/main/resources/views/Sidebar.fxml
+++ b/src/main/resources/views/Sidebar.fxml
@@ -19,14 +19,14 @@
                 </VBox>
             </top>
             <center>
-                <VBox prefWidth="150.0" styleClass="menu">
-                    <Button text="Home" onAction="#handleHome" styleClass="menu-item"/>
-                    <Button text="Calendar" onAction="#handleCalendar" styleClass="menu-item"/>
+                <VBox prefWidth="150.0" styleClass="my-menu">
+                    <Button text="Home" onAction="#handleHome" styleClass="my-menu-item"/>
+                    <Button text="Calendar" onAction="#handleCalendar" styleClass="my-menu-item"/>
                 </VBox>
             </center>
             <bottom>
-                <VBox prefWidth="150.0" styleClass="menu">
-                    <Button text="Logout" onAction="#handleLogout" styleClass="menu-item"/>
+                <VBox prefWidth="150.0" styleClass="my-menu">
+                    <Button text="Logout" onAction="#handleLogout" styleClass="my-menu-item"/>
                 </VBox>
             </bottom>
         </BorderPane>
