--- a/src/main/resources/views/calendar/DayInfo.fxml
+++ b/src/main/resources/views/calendar/DayInfo.fxml
@@ -38,8 +38,8 @@
 
             <Label text="Ajouter Créneau Libre" styleClass="add-creneau-label"/>
             <HBox alignment="CENTER" spacing="10">
-                <TextField fx:id="heureDebutTextField" promptText="Début [HH:mm:ss]" focusTraversable="false" styleClass="heure-field"/>
-                <TextField fx:id="heureFinTextField" promptText="Fin [HH:mm:ss]" focusTraversable="false" styleClass="heure-field"/>
+                <TextField fx:id="heureDebutTextField" promptText="Début [HH:mm:ss]" onKeyPressed="#handleAddCreneauTextFieldKeyPressed" focusTraversable="false" styleClass="heure-field"/>
+                <TextField fx:id="heureFinTextField" promptText="Fin [HH:mm:ss]" onKeyPressed="#handleAddCreneauTextFieldKeyPressed" focusTraversable="false" styleClass="heure-field"/>
             </HBox>
             <Button styleClass="submit-btn" onAction="#handleAddCreneauButtonAction">Ajouter</Button>
             <Label fx:id="errorLabel" styleClass="error-message-label" alignment="CENTER" textAlignment="CENTER"/>
