add home page ui [version 0.0]

--- a/src/main/resources/views/calendar/DayInfo.fxml
+++ b/src/main/resources/views/calendar/DayInfo.fxml
@@ -6,7 +6,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
             stylesheets="@../../styles/calendar/DayInfo.css"
-            fx:controller="com.example.controllers.Calendar.DayInfoController"
+            fx:controller="com.example.controllers.calendar.DayInfoController"
             AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"
 >
     <top>
