--- a/src/main/resources/views/calendar/Calendar.fxml
+++ b/src/main/resources/views/calendar/Calendar.fxml
@@ -6,7 +6,7 @@
 
 <GridPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
           stylesheets="@../../styles/calendar/Calendar.css"
-          fx:controller="com.example.controllers.Calendar.CalendarController"
+          fx:controller="com.example.controllers.calendar.CalendarController"
           AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"
           styleClass="root"
 >
