--- a/src/main/resources/views/project/AddProjectPopup.fxml
+++ b/src/main/resources/views/project/AddProjectPopup.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 
 <GridPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-          fx:controller="com.example.controllers.home.AddProjectPopupController"
+          fx:controller="com.example.controllers.project.AddProjectPopupController"
           style="-fx-padding: 20" vgap="10" hgap="10"
 >
     <HBox GridPane.rowIndex="0" GridPane.columnIndex="0" GridPane.columnSpan="2" alignment="CENTER">
