--- a/src/main/resources/views/tache/AddTachePopup.fxml
+++ b/src/main/resources/views/tache/AddTachePopup.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 
 <VBox xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.controllers.home.AddTachePopupController"
+      fx:controller="com.example.controllers.tache.AddTachePopupController"
       style="-fx-padding: 20;" spacing="20"
 >
     <HBox alignment="CENTER">
