--- a/src/main/resources/views/calendar/DayInfo.fxml
+++ b/src/main/resources/views/calendar/DayInfo.fxml
@@ -14,6 +14,12 @@
             <Label fx:id="dayDateLabel" styleClass="day-date"/>
             <Label fx:id="dayNameLabel" styleClass="day-name"/>
 
+            <ProgressBar fx:id="realisationStateProgressBar" styleClass="realisation-state" prefWidth="200" minHeight="15" maxHeight="15">
+                <padding>
+                    <Insets top="5"/>
+                </padding>
+            </ProgressBar>
+
             <Separator>
                 <padding>
                     <Insets top="10" bottom="10"/>
