Calendrier de l'historique mis a jour

--- a/src/main/resources/views/Sidebar.fxml
+++ b/src/main/resources/views/Sidebar.fxml
@@ -22,6 +22,7 @@
                 <VBox prefWidth="150.0" styleClass="my-menu">
                     <Button text="Home" onAction="#handleHome" styleClass="my-menu-item"/>
                     <Button text="Calendar" onAction="#handleCalendar" styleClass="my-menu-item"/>
+                    <Button text="Historique" onAction="#handleHistorique" styleClass="my-menu-item"/>
                 </VBox>
             </center>
             <bottom>
