add edit tache decomposable [version alpha]

--- a/src/main/resources/views/project/InfoProjectPopup.fxml
+++ b/src/main/resources/views/project/InfoProjectPopup.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<!--todo ajouter rendement dans le projet-->
+
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.*?>
