--- a/src/main/resources/views/tache/InfoTacheDecomposablePopup.fxml
+++ b/src/main/resources/views/tache/InfoTacheDecomposablePopup.fxml
@@ -138,7 +138,7 @@
 
     <HBox alignment="CENTER" spacing="20">
         <Button style="-fx-background-color: #2B7BFF; -fx-text-fill: white; -fx-font-size: 18px; -fx-cursor: hand;"
-                onAction="#handleEditButtonAction" fx:id="editButton">
+                onAction="#handleEditButtonAction">
             <effect>
                 <DropShadow color="#1F579D" radius="5" spread="0.2"/>
             </effect>
@@ -146,7 +146,7 @@
         </Button>
 
         <Button style="-fx-background-color: #2B7BFF; -fx-text-fill: white; -fx-font-size: 18px; -fx-cursor: hand;"
-                onAction="#handleDecomposerButtonAction" fx:id="decomposerButton">
+                onAction="#handleDecomposerButtonAction">
             <effect>
                 <DropShadow color="#1F579D" radius="5" spread="0.2"/>
             </effect>
@@ -154,7 +154,7 @@
         </Button>
 
         <Button style="-fx-background-color: #2B7BFF; -fx-text-fill: white; -fx-font-size: 18px; -fx-cursor: hand;"
-                onAction="#handleClearButtonAction" fx:id="clearButton">
+                onAction="#handleClearButtonAction">
             <effect>
                 <DropShadow color="#1F579D" radius="5" spread="0.2"/>
             </effect>
