--- a/src/main/resources/views/project/InfoProjectPopup.fxml
+++ b/src/main/resources/views/project/InfoProjectPopup.fxml
@@ -16,11 +16,11 @@
         </Label>
     </HBox>
 
-    <HBox alignment="CENTER" spacing="10">
+    <HBox alignment="CENTER" spacing="20">
         <VBox spacing="10">
             <GridPane alignment="CENTER" hgap="20">
                 <columnConstraints>
-                    <ColumnConstraints prefWidth="150"/>
+                    <ColumnConstraints/>
                     <ColumnConstraints hgrow="ALWAYS"/>
                 </columnConstraints>
 
@@ -37,7 +37,7 @@
 
             <GridPane alignment="CENTER" hgap="20">
                 <columnConstraints>
-                    <ColumnConstraints prefWidth="150"/>
+                    <ColumnConstraints/>
                     <ColumnConstraints hgrow="ALWAYS"/>
                 </columnConstraints>
 
@@ -65,7 +65,7 @@
             <VBox alignment="CENTER" maxHeight="250">
                 <ScrollPane fitToWidth="true" fitToHeight="true"
                             style="-fx-background-color: transparent; -fx-border-color: transparent; -fx-hbar-policy: never; -fx-vbar-policy: never;">
-                    <VBox fx:id="tachesContainer" alignment="CENTER" spacing="10" style="-fx-padding: 10 0;"/>
+                    <VBox fx:id="tachesContainer" alignment="CENTER" spacing="10" style="-fx-padding: 10;"/>
                 </ScrollPane>
             </VBox>
         </VBox>
