prepare file to implement profile page

--- a/src/main/resources/views/Sidebar.fxml
+++ b/src/main/resources/views/Sidebar.fxml
@@ -20,6 +20,7 @@
             </top>
             <center>
                 <VBox prefWidth="150.0" styleClass="my-menu">
+                    <Button text="Profile" onAction="#handleProfile" styleClass="my-menu-item"/>
                     <Button text="Home" onAction="#handleHome" styleClass="my-menu-item"/>
                     <Button text="Calendar" onAction="#handleCalendar" styleClass="my-menu-item"/>
                     <Button text="Historique" onAction="#handleHistorique" styleClass="my-menu-item"/>
