--- a/src/main/resources/views/profile/Profile.fxml
+++ b/src/main/resources/views/profile/Profile.fxml
@@ -1,12 +1,131 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-            stylesheets="@../../styles/Profile.css"
+<?import javafx.scene.image.ImageView?>
+<?import javafx.geometry.Insets?>
+<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.example.controllers.profile.ProfileController"
-            AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"
+            stylesheets="@../../styles/Profile.css" style="-fx-padding: 20;"
+            AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0"
 >
-    <Label>Profile</Label>
-</AnchorPane>
+    <center>
+        <BorderPane>
+            <top>
+                <GridPane alignment="CENTER" hgap="30" vgap="20" style="-fx-background-color: white; -fx-padding: 20; -fx-background-radius: 20;">
+                    <HBox GridPane.rowIndex="0" GridPane.columnIndex="0" alignment="CENTER">
+                        <Label style="-fx-font-size: 18px;">Your pseudo</Label>
+                    </HBox>
+                    <HBox GridPane.rowIndex="0" GridPane.columnIndex="1" alignment="CENTER">
+                        <TextField fx:id="pseudoTextField" style="-fx-background-color: #f0f0f0; -fx-prompt-text-fill: #B0BEC5;"/>
+                    </HBox>
+                    <Button onAction="#handleEditPseudo" GridPane.rowIndex="0" GridPane.columnIndex="2" styleClass="custom-button">Save</Button>
+
+                    <HBox GridPane.rowIndex="1" GridPane.columnIndex="0" alignment="CENTER">
+                        <Label style="-fx-font-size: 18px;">Durée min de créneau libre</Label>
+                    </HBox>
+                    <HBox GridPane.rowIndex="1" GridPane.columnIndex="1" alignment="CENTER" spacing="10">
+                        <HBox alignment="CENTER" spacing="5">
+                            <Label style="-fx-text-fill: #2196F3;">H</Label>
+                            <Spinner fx:id="hoursSpinner" prefWidth="60" editable="true" style="-fx-background-color: #FFFFFF;"/>
+                        </HBox>
+                        <HBox alignment="CENTER" spacing="5">
+                            <Label style="-fx-text-fill: #2196F3;">M</Label>
+                            <Spinner fx:id="minutesSpinner" prefWidth="60" editable="true" style="-fx-background-color: #FFFFFF;"/>
+                        </HBox>
+                        <HBox alignment="CENTER" spacing="5">
+                            <Label style="-fx-text-fill: #2196F3;">S</Label>
+                            <Spinner fx:id="secondsSpinner" prefWidth="60" editable="true" style="-fx-background-color: #FFFFFF;"/>
+                        </HBox>
+                    </HBox>
+                    <Button onAction="#handleEditCreneau" GridPane.rowIndex="1" GridPane.columnIndex="2" styleClass="custom-button">Save</Button>
+
+                    <HBox GridPane.rowIndex="2" GridPane.columnIndex="0" alignment="CENTER">
+                        <Label style="-fx-font-size: 18px;">Nombre taches min par jour</Label>
+                    </HBox>
+                    <HBox GridPane.rowIndex="2" GridPane.columnIndex="1" alignment="CENTER">
+                        <TextField fx:id="nombreTachesTextField" style="-fx-background-color: #f0f0f0; -fx-prompt-text-fill: #B0BEC5;"/>
+                    </HBox>
+                    <Button onAction="#handleEditJournee" GridPane.rowIndex="2" GridPane.columnIndex="2" styleClass="custom-button">Save</Button>
+                </GridPane>
+            </top>
+            <center>
+                <HBox alignment="CENTER">
+                    <VBox alignment="CENTER" spacing="20">
+                        <Label style="-fx-font-size: 24px; -fx-text-fill: #333333; -fx-font-weight: bold;">Your badges</Label>
+
+                        <HBox alignment="CENTER" spacing="20" style="-fx-background-color: #F8F8F8; -fx-background-radius: 10; -fx-padding: 20; -fx-border-radius: 10; -fx-border-width: 1; -fx-border-color: #2196F3;">
+                            <VBox style="-fx-padding: 10; -fx-background-radius: 10;" styleClass="badge-card" spacing="20">
+                                <ImageView fx:id="goodBadgeImageView" fitHeight="100.0" fitWidth="100.0"/>
+                                <VBox spacing="5" alignment="CENTER">
+                                    <HBox alignment="CENTER">
+                                        <Label style="-fx-font-size: 18px; -fx-text-fill: #2196F3;">Good</Label>
+                                    </HBox>
+                                    <HBox alignment="CENTER">
+                                        <Label fx:id="goodBadgeLabel" style="-fx-font-size: 16px; -fx-text-fill: #666666;"/>
+                                    </HBox>
+                                </VBox>
+                            </VBox>
+                            <VBox style="-fx-padding: 10; -fx-background-radius: 10;" styleClass="badge-card" spacing="20">
+                                <ImageView fx:id="veryGoodBadgeImageView" fitHeight="100.0" fitWidth="100.0"/>
+                                <VBox spacing="5" alignment="CENTER">
+                                    <HBox alignment="CENTER">
+                                        <Label style="-fx-font-size: 18px; -fx-text-fill: #2196F3;">Very Good</Label>
+                                    </HBox>
+                                    <HBox alignment="CENTER">
+                                        <Label fx:id="veryGoodBadgeLabel" style="-fx-font-size: 16px; -fx-text-fill: #666666;"/>
+                                    </HBox>
+                                </VBox>
+                            </VBox>
+                            <VBox style="-fx-padding: 10; -fx-background-radius: 10;" styleClass="badge-card" spacing="20">
+                                <ImageView fx:id="excellentBadgeImageView" fitHeight="100.0" fitWidth="100.0"/>
+                                <VBox spacing="5" alignment="CENTER">
+                                    <HBox alignment="CENTER">
+                                        <Label style="-fx-font-size: 18px; -fx-text-fill: #2196F3;">Excellent</Label>
+                                    </HBox>
+                                    <HBox alignment="CENTER">
+                                        <Label fx:id="excellentBadgeLabel" style="-fx-font-size: 16px; -fx-text-fill: #666666;"/>
+                                    </HBox>
+                                </VBox>
+                            </VBox>
+                        </HBox>
+                    </VBox>
+                </HBox>
+            </center>
+            <bottom>
+                <HBox alignment="CENTER">
+                    <VBox alignment="CENTER" spacing="10" style="-fx-background-color: #F8F8F8; -fx-background-radius: 10; -fx-padding: 10; -fx-border-radius: 5; -fx-border-width: 1; -fx-border-color: #2196F3;">
+                        <Label fx:id="rendemmentLabel" style="-fx-font-size: 24px; -fx-text-fill: #333333; -fx-font-weight: bold;"/>
+                        <Label fx:id="jourRentableLabel" style="-fx-font-size: 18px; -fx-text-fill: #666666;"/>
+                    </VBox>
+                </HBox>
+            </bottom>
+        </BorderPane>
+    </center>
+    <right>
+        <BorderPane>
+            <padding>
+                <Insets left="20"/>
+            </padding>
+            <top>
+                <HBox alignment="CENTER">
+                    <Label style="-fx-font-size: 24px; -fx-text-fill: #333333; -fx-font-weight: bold;">Categories</Label>
+                </HBox>
+            </top>
+            <center>
+                <VBox alignment="TOP_CENTER" style="-fx-background-color: #F8F8F8; -fx-background-radius: 10; -fx-padding: 10;">
+                    <ScrollPane fitToWidth="true" fitToHeight="true"
+                                style="-fx-background-color: transparent; -fx-border-color: transparent; -fx-hbar-policy: never; -fx-vbar-policy: never;">
+                        <VBox fx:id="categoriesContainer" spacing="10" style="-fx-background-color: #F8F8F8; -fx-background-radius: 10;"/>
+                    </ScrollPane>
+                </VBox>
+            </center>
+            <bottom>
+                <HBox alignment="CENTER" style="-fx-padding: 20 0;">
+                    <Button onAction="#handleAddCategoryButtonAction" styleClass="custom-button">Add New Category</Button>
+                </HBox>
+            </bottom>
+        </BorderPane>
+    </right>
+</BorderPane>
